--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/MrBackKom/fis-rong",
   "dependencies": {
     "fis": "^1.9.28",
+    "rong-command-release":"^0.0.5",
     "fis-parser-less": "^0.1.3",
     "fis-parser-utc": "0.0.2",
     "fis-postpackager-autoload": "0.0.20",
